# kcf-tracking

./: CMakeLists.txt  Makefile  README.md  kcf_tutorial.cpp  main.cpp
